[package]
name = "kmltester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#kml = { version = "0.6.0", features = ["geo-types"] }
kml = { git = "https://github.com/zdannar/kml.git", features = ["geo-types"]  }
geojson = {version = "0.24.0", features = ["geo-types"]}
geo-types = { version = "0.7", features = ["serde"]}
quick-xml = "0.26.0"